// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render Expense summary correctly with 1 expense 1`] = `
<div>
  <h3>
    Viewing 
    1
     
    expense
     totalling 
    $456.00
  </h3>
</div>
`;

exports[`should render Expense summary correctly with multiple expenses 1`] = `
<div>
  <h3>
    Viewing 
    3
     
    expenses
     totalling 
    $3,456.00
  </h3>
</div>
`;
